myteo/test/analyze/type_check/patterns/or_pattern_variables.exp
Error: Expected type `Unit` but found `Int`
test/analyze/type_check/patterns/or_pattern_variables.myte:7:7
 7 |       (x: Unit);
   |        ^

Error: Expected type `(Int, Bool)` but found `(Int, Int)`
test/analyze/type_check/patterns/or_pattern_variables.myte:18:6-21
 18 |     | (x, _) | (_, x) -> ()
    |       ^^^^^^^^^^^^^^^